# rust-examples

./: .gitignore  README.md
asm/hello_asm/: Cargo.toml  README.md
asm/hello_asm/src/: main.rs
aws-lambda-example-db/: Cargo.toml  README.md  samconfig.toml  template.yaml
aws-lambda-example-db/env/: local.env
aws-lambda-example-db/src/: auth.rs  bootstrap.rs  context.rs  error.rs  handlers.rs  lib.rs  main.rs  runtime_env.rs  user.rs
aws-lambda-example-db/tests/: auth_flow.rs  login_flow.rs  refresh_flow.rs  user_flow.rs
aws-lambda-example-db/tests/common/: mod.rs
aws-lambda-example-hello-world/: Cargo.toml  README.md
aws-lambda-example-hello-world/src/: http_handler.rs
mini/: .gitignore  Cargo.toml  README.md
mini/examples/: expr  expr.mini  hello  hello.mini
mini/src/: ast.rs  codegen.rs  lib.rs  link.rs  main.rs  parser.rs
